Add response caching to reduce api calls.
Only make remote api call every 10 minutes (or more if not in use)

--- a/is-hpp-open/config.ini
+++ b/is-hpp-open/config.ini
@@ -8,3 +8,4 @@ user-agent = "github.com/peethwd/is-hpp-open/"
 endpoint = "http://api.rainchasers.com/v1/river/"
 trent-uuid = "5d75ed38-1f61-4306-9ed8-259963256097"
 cut-off-height = 2.00
+request-time-wait = 600 ;length of time to wait between requests in seconds.
